# album-card-generator

./: .gitignore  README.md  config.toml.example  make_albums.py  pyproject.toml  requirements.txt  test_basic.py  test_debug_render.py  test_generate_jcard.py  test_rym_descriptors.py  test_tape_sides.py
examples/: README.md  double_album_example.py  manual_album_example.py  multi_card_example.py  simple_example.py
scripts/: download-fonts.sh
src/: genre_hierarchy.json
src/cardgen/: __init__.py  cli.py  config.py  types.py
src/cardgen/api/: __init__.py  builder.py  models.py  navidrome.py
src/cardgen/design/: __init__.py  base.py
src/cardgen/design/cards/: __init__.py  double_album_jcard.py  jcard.py  jcard_4panel.py  jcard_5panel.py
src/cardgen/design/sections/: __init__.py  container.py  cover.py  descriptors.py  genre_descriptors.py  genre_tree.py  metadata.py  spine.py  tracklist.py
src/cardgen/design/themes/: __init__.py  default.py
src/cardgen/fonts/: README.md  __init__.py  google.py
src/cardgen/render/: __init__.py  image.py  pdf.py
src/cardgen/utils/: __init__.py  album_art.py  color_extraction.py  dimensions.py  genres.py  tape.py  text.py
